# Lesson_30_HW_Django

./: pyproject.toml
ad/: permissions.py  serializers.py  urls.py  views.py
ad/migrations/: 0001_initial.py  0002_remove_ad_category_ad_category.py  0003_alter_ad_image.py  0004_alter_ad_author.py
avito/: settings.py  urls.py
category/: models.py
fixtures/: user.csv
selection/: permissions.py  serializers.py  urls.py  views.py
user/: models.py  serializers.py  urls.py
user/migrations/: 0001_initial.py  0002_alter_user_options.py
